# GraphJSON

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  test.json
controller/: controller.cpp  controller.h
graph/: graph.cpp  graph.h
gui/customgraphicsview/: customgraphicsview.cpp  customgraphicsview.h
gui/graph/: edge.cpp  edge.h  node.cpp  node.h
gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
keysmanager/: keysmanager.cpp
resources/: mainwindow.qml
tests/: hard_test.json  insane_test.json  middle_test.json  simple_test.json
util/: keysmanager.cpp
util/graph/: graph.cpp  graph.h
util/keysmanager/: keysmanager.h
